--- a/VRChat/71/1268671.html
+++ b/VRChat/71/1268671.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "O90yy/kQ9JtrLQHp4A/VA0v8V+u0irCWHnkAMlBJjaM="></script>
+    "IympaVGP0QhyvSH8pEPR/BuwnrHHH+6AvS74trtPBYg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"レーザーランチャー KAGIYA","description":"\n◆ 解説\n\n手持ちレーザー砲の３Ｄモデルです。\n未来の銃なのでレーザー以外も撃てるかも知れません。\n景気の良い一発をバシバシ撃っちゃいましょう！\n\nテクスチャカラー差分は６種類付属。\n自分だけのカラーが作れるようにPSDも付属しています。\n\n※本作に射撃機能は付属しません。\n　おすすめエフェクト：https://booth.pm/ja/items/1241518\n　おすすめ参考サイト：https://note.mu/sasasa_sasa/n/n35c5711603f9\n\n\nポリゴン数：2572（1丁あたり）\n\n\n◆ 注意\n　本モデルに美少女（Shacloちゃん）は付属しません。\n　素敵な子ですので、ぜひこちらも御覧ください。\n\n　Shacloちゃん：https://booth.pm/ja/items/987296\n\n　宣伝での使用許可をくださった戸森美影さま、\n　誠にありがとうございました。\n\n\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n　　　　利用規約\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n本モデルをご購入された時点で、\n本利用規約に同意したものとさせていただきます。\n\nまた、本モデルの著作権は制作者である\nうのいずに帰属するものとします。\n\n◆ 利用について\n★フリー版\nVRChatの個人用アバター以外での使用不可。\n※ペデスタル・ワールドギミック等への導入不可。\n\n- - - - - - - - - - - - - - - - - - - -\n\n★ブースト版\n当モデルデータに付属しているデータの改変は自由です。\n本素材に関しては、営利、非営利を問わず\nゲーム、映像作品、動画配信等にご利用いただけます。\n※ Unreal Engine 4, MMD等ソフトウェア問わずご利用いただけます。\n\n本モデルを使用したyoutube等動画サイトでの使用を許可します。\n収益化も制限しません。\n\nR-18、R-18Gへの利用は制限いたしません。\n公開する際は個人の責任の下、\n法律に基づいた使用をお願いいたします。\n\n◆ 禁止\n公序良俗に反する行為や目的、政治、宗教活動、他者に対する誹謗中傷目的での利用を禁止します。\nまた、当モデルデータに付属しているデータの再配布、販売は改変の有無を問わず禁止します\n\n本品をVRコミュニケーションツールのアバターとして\n購入者以外の人間が着用できるような状態にすることを禁止します。\n例：アバターペデスタル（VRChat）など\n\n◆ 免責事項\n当モデルを利用することで発生したトラブルや損失、損害に対して、製作者は一切責任を負いません。当モデルを使用する際は利用者の責任において行ってください。\n\n(c) 2019 unois All Rights Reserved.","url":"https://booth.pm/ja/items/1268671","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c7999e42-deba-47e7-bf43-8f75c3fca7bc/i/1268671/e891ef30-e578-436e-96dd-c31e9f2f75e1_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="O90yy/kQ9JtrLQHp4A/VA0v8V+u0irCWHnkAMlBJjaM="></script>
+    nonce="IympaVGP0QhyvSH8pEPR/BuwnrHHH+6AvS74trtPBYg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -634,7 +634,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
