updated at: 2023-05-31 20:42, 3Dモデル「たわわ胸 Extra for Quiche Ver.2.30」【キッシュ素体専用】 - 空々仮想製作所 - BOOTH

--- a/VRChat/02/1130602.html
+++ b/VRChat/02/1130602.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      3Dモデル「たわわ胸 Extra for Quiche Ver.2.30」【キッシュ素体専用】 - 空々神社社務所 -
+      3Dモデル「たわわ胸 Extra for Quiche Ver.2.30」【キッシュ素体専用】 - 空々仮想製作所 -
       BOOTH
     </title>
     <meta name="description" content=
@@ -15,14 +15,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "3Dモデル「たわわ胸 Extra for Quiche Ver.2.30」【キッシュ素体専用】 - 空々神社社務所 - BOOTH">
+    "3Dモデル「たわわ胸 Extra for Quiche Ver.2.30」【キッシュ素体専用】 - 空々仮想製作所 - BOOTH">
     <meta name="twitter:description" content=
     "●更新(重要なもの及び最近のもののみ表記） 2021/03/31：Ver.2.30： 　胸先の高品質化と全体的なメッシュ調整、 　UVの変更（胸先のテクスチャーを綺麗に見せるため） 　これらに伴うテクスチャーの変更 　また、胸先が凸になってるのがデフォルトになりました。 　（これはUnity2018がシェイプキーによる法線変更に弱いため） 　あとライセンスを変更しました。基本的に同じ条件ですが、 　細部で違う場合は購入したときのライセンスに従ってください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1130602/d5659924-d54d-4741-98c9-9b6fd09e226b_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "3Dモデル「たわわ胸 Extra for Quiche Ver.2.30」【キッシュ素体専用】 - 空々神社社務所 - BOOTH">
+    "3Dモデル「たわわ胸 Extra for Quiche Ver.2.30」【キッシュ素体専用】 - 空々仮想製作所 - BOOTH">
     <meta property="og:description" content=
     "●更新(重要なもの及び最近のもののみ表記） 2021/03/31：Ver.2.30： 　胸先の高品質化と全体的なメッシュ調整、 　UVの変更（胸先のテクスチャーを綺麗に見せるため） 　これらに伴うテクスチャーの変更 　また、胸先が凸になってるのがデフォルトになりました。 　（これはUnity2018がシェイプキーによる法線変更に弱いため） 　あとライセンスを変更しました。基本的に同じ条件ですが、 　細部で違う場合は購入したときのライセンスに従ってください。">
     <meta property="og:image" content=
@@ -71,9 +71,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "VthgGsCTbjDBuDkoIHeDw4D3VUuNnHMz+DWWOTCyF7k="></script>
+    "hzOKlIXQcEyrnnEMq3hxR/ZrkgQuPMrncPjMlgnuZXM="></script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
@@ -84,7 +84,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VthgGsCTbjDBuDkoIHeDw4D3VUuNnHMz+DWWOTCyF7k="></script>
+    nonce="hzOKlIXQcEyrnnEMq3hxR/ZrkgQuPMrncPjMlgnuZXM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
