updated at: 2023-05-31 20:58, フリー素材保管蔵 - 空々仮想製作所 - BOOTH

--- a/VRChat/72/1103072.html
+++ b/VRChat/72/1103072.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      フリー素材保管蔵 - 空々神社社務所 - BOOTH
+      フリー素材保管蔵 - 空々仮想製作所 - BOOTH
     </title>
     <meta name="description" content=
     "フリー素材の配布です。 自由に使用して構いません。再利用可能なかたちで同梱配布販売しても良いです。クレジット表記不要。ただしいかなる損害にも責任を持ちません。 今後いろいろ追加していく予定。たぶん！ 2019/01/25追加品 ・PokkuriMatcap.png .psd　（空々神社巫女服１のぽっくりで使用したもの。特殊用途なマットキャップ） ・下着.png ・下着2ForQuichebody.png .psd　（下着類はキッシュ用素体のテクスチャーn_body.pngへ合成して使う前提のもの。例のタートルや巫女服に同梱したものと同一） 2018/11/23 ・flarematcap.png">
@@ -14,13 +14,13 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "フリー素材保管蔵 - 空々神社社務所 - BOOTH">
+    "フリー素材保管蔵 - 空々仮想製作所 - BOOTH">
     <meta name="twitter:description" content=
     "フリー素材の配布です。 自由に使用して構いません。再利用可能なかたちで同梱配布販売しても良いです。クレジット表記不要。ただしいかなる損害にも責任を持ちません。 今後いろいろ追加していく予定。たぶん！ 2019/01/25追加品 ・PokkuriMatcap.png .psd　（空々神社巫女服１のぽっくりで使用したもの。特殊用途なマットキャップ） ・下着.png ・下着2ForQuichebody.png .psd　（下着類はキッシュ用素体のテクスチャーn_body.pngへ合成して使う前提のもの。例のタートルや巫女服に同梱したものと同一） 2018/11/23 ・flarematcap.png">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1103072/dc3afe64-cc04-4641-8208-fbb0b405501b_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content="フリー素材保管蔵 - 空々神社社務所 - BOOTH">
+    <meta property="og:title" content="フリー素材保管蔵 - 空々仮想製作所 - BOOTH">
     <meta property="og:description" content=
     "フリー素材の配布です。 自由に使用して構いません。再利用可能なかたちで同梱配布販売しても良いです。クレジット表記不要。ただしいかなる損害にも責任を持ちません。 今後いろいろ追加していく予定。たぶん！ 2019/01/25追加品 ・PokkuriMatcap.png .psd　（空々神社巫女服１のぽっくりで使用したもの。特殊用途なマットキャップ） ・下着.png ・下着2ForQuichebody.png .psd　（下着類はキッシュ用素体のテクスチャーn_body.pngへ合成して使う前提のもの。例のタートルや巫女服に同梱したものと同一） 2018/11/23 ・flarematcap.png">
     <meta property="og:image" content=
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "HJ2JJ9uHF2xjEp3gT18MFxCSOR9XzALzr2rXC6tKtWM="></script>
+    "+eOSJLC1Kcu8LK3cep8DAFP5Gvjhby+OGAGK0uMzi94="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"フリー素材保管蔵","description":"フリー素材の配布です。\n自由に使用して構いません。再利用可能なかたちで同梱配布販売しても良いです。クレジット表記不要。ただしいかなる損害にも責任を持ちません。\n今後いろいろ追加していく予定。たぶん！\n\n2019/01/25追加品\n・PokkuriMatcap.png .psd　（空々神社巫女服１のぽっくりで使用したもの。特殊用途なマットキャップ）\n・下着.png\n・下着2ForQuichebody.png .psd　（下着類はキッシュ用素体のテクスチャーn_body.pngへ合成して使う前提のもの。例のタートルや巫女服に同梱したものと同一）\n\n2018/11/23\n・flarematcap.png\n・flarematcap2.png　（例のタートルネックセーターに使用したmatcap）","url":"https://booth.pm/ja/items/1103072","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1103072/dc3afe64-cc04-4641-8208-fbb0b405501b_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HJ2JJ9uHF2xjEp3gT18MFxCSOR9XzALzr2rXC6tKtWM="></script>
+    nonce="+eOSJLC1Kcu8LK3cep8DAFP5Gvjhby+OGAGK0uMzi94="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -163,9 +163,9 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://kuukuukon.booth.pm/"><img alt=
-                            "空々神社社務所" class=
+                            "空々仮想製作所" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/31c309e8-cf8f-4cfc-9495-5cbbe2f34f2c_base_resized.jpg">空々神社社務所</a>
+                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/acfaaa10-b281-4b3f-b44d-25a0f1c5a1e8_base_resized.jpg">空々仮想製作所</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               フリー素材保管蔵
