updated at: 2023-05-31 21:13, 【Free】スキニング済み3Dモデル「優しい６ボーン式触手さん１」 - 空々仮想製作所 - BOOTH

--- a/VRChat/99/1083899.html
+++ b/VRChat/99/1083899.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      【Free】スキニング済み3Dモデル「優しい６ボーン式触手さん１」 - 空々神社社務所 - BOOTH
+      【Free】スキニング済み3Dモデル「優しい６ボーン式触手さん１」 - 空々仮想製作所 - BOOTH
     </title>
     <meta name="description" content=
     "スキニング済み３Dモデル「優しい６ボーン式触手さん１」 ●概要 ６ボーンで構成された標準的な優しい触手さんの３Dデータ(FBX)です。 たった６ボーンですがなめらかなウェイト付けをしてるため、 なめらかな動きを表現しつつ制御が比較的楽です。たぶん。 ・3Dデータ形式：FBX ・ポリゴン合計：2072 ・ベーステクスチャー、ノーマルマップ付属 ・改変自由 ・本データ、改変物の2次配布可 ・収益化・無償問わず動画・放送への出演可 ・本データ、改変物を再利用不可能な形で組み込んだアプリケーション、ゲームの配布・販売可 ・R18/R18Gへの利用可。ただし公共の場での１８禁用途での利用は禁止します。">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【Free】スキニング済み3Dモデル「優しい６ボーン式触手さん１」 - 空々神社社務所 - BOOTH">
+    "【Free】スキニング済み3Dモデル「優しい６ボーン式触手さん１」 - 空々仮想製作所 - BOOTH">
     <meta name="twitter:description" content=
     "スキニング済み３Dモデル「優しい６ボーン式触手さん１」 ●概要 ６ボーンで構成された標準的な優しい触手さんの３Dデータ(FBX)です。 たった６ボーンですがなめらかなウェイト付けをしてるため、 なめらかな動きを表現しつつ制御が比較的楽です。たぶん。 ・3Dデータ形式：FBX ・ポリゴン合計：2072 ・ベーステクスチャー、ノーマルマップ付属 ・改変自由 ・本データ、改変物の2次配布可 ・収益化・無償問わず動画・放送への出演可 ・本データ、改変物を再利用不可能な形で組み込んだアプリケーション、ゲームの配布・販売可 ・R18/R18Gへの利用可。ただし公共の場での１８禁用途での利用は禁止します。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1083899/ba706fe6-8a9c-47b6-8a66-077b33abcce0_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【Free】スキニング済み3Dモデル「優しい６ボーン式触手さん１」 - 空々神社社務所 - BOOTH">
+    "【Free】スキニング済み3Dモデル「優しい６ボーン式触手さん１」 - 空々仮想製作所 - BOOTH">
     <meta property="og:description" content=
     "スキニング済み３Dモデル「優しい６ボーン式触手さん１」 ●概要 ６ボーンで構成された標準的な優しい触手さんの３Dデータ(FBX)です。 たった６ボーンですがなめらかなウェイト付けをしてるため、 なめらかな動きを表現しつつ制御が比較的楽です。たぶん。 ・3Dデータ形式：FBX ・ポリゴン合計：2072 ・ベーステクスチャー、ノーマルマップ付属 ・改変自由 ・本データ、改変物の2次配布可 ・収益化・無償問わず動画・放送への出演可 ・本データ、改変物を再利用不可能な形で組み込んだアプリケーション、ゲームの配布・販売可 ・R18/R18Gへの利用可。ただし公共の場での１８禁用途での利用は禁止します。">
     <meta property="og:image" content=
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "iAgOLuuIYVKtiUbmbgIUTjlBrWQ3dBcDQ5e0SR9XFlo="></script>
+    "Ayn0ojM7BnsRMwH4Rajksk59bmXwrypRvBahOh3wwMQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Free】スキニング済み3Dモデル「優しい６ボーン式触手さん１」","description":"スキニング済み３Dモデル「優しい６ボーン式触手さん１」\n\n\n●概要\n６ボーンで構成された標準的な優しい触手さんの３Dデータ(FBX)です。\nたった６ボーンですがなめらかなウェイト付けをしてるため、\nなめらかな動きを表現しつつ制御が比較的楽です。たぶん。\n\n・3Dデータ形式：FBX\n・ポリゴン合計：2072\n・ベーステクスチャー、ノーマルマップ付属\n\n・改変自由\n・本データ、改変物の2次配布可\n・収益化・無償問わず動画・放送への出演可\n・本データ、改変物を再利用不可能な形で組み込んだアプリケーション、ゲームの配布・販売可\n・R18/R18Gへの利用可。ただし公共の場での１８禁用途での利用は禁止します。\n\n詳しくは下記の利用規約をお読み、同意してからご利用ください。\n\n\nー利用規約ー\n　スキニング済み３Dモデル「優しい６ボーン式触手さん１」\n　作：空々こん\n\n　本データ及びに改造データの著作権は空々こんに帰属します。\n\n【利用許諾】\n1.本データをアプリケーションで利用すること、ネットワーク上で利用すること、改変することを許可する。\n\n2.本データ、改変データが映る動画、放送を配信、放送することを有償・収益化・無償にかかわらず許可する。\n\n3.本データ、改変データを再利用できない形でアプリケーションやゲームに組み込み、配布・販売することを許可する。\n\n4.本データ、改変データを再利用できる形での配布（無償のみ）を許可する。\n　その際、Boothのページへのリンクと「空々こん」のクレジットを記入すること。\n\n5.R-18・R-18Gへの利用を許可する。\n\n【禁止事項】\n1.パブリックな場でのR18用途での利用を禁止する。\n\n\n【利用条件】\n1.本データ及びその改変物を公序良俗に反する行為や目的、反社会的な行為や目的、特定の信条や宗教、政治的発言のために利用しないこと。\n\n2.第三者の知的財産権およびその他一切の権利を損なう行為を行わず、かかる権利を損なう目的のために本データ及びその改変物を利用しないこと。\n\n【免責】\n1.本データを含むあらゆるデータを利用することで、利用者が受ける損害および被害に関し、空々こんはいかなる補償をもいたしません。\n\n2.本データを含むあらゆるデータを利用することで、利用者が他者に損害および被害を与えた場合には、その責任および補償の義務は当該利用者にあるものとし、空々こんは一切責任を負いません。\n\n-----------------------------------------------------\n制定 平成30年11月07日\n\n疑問点や問い合わせ、質問等がありましたら\nTwitter：@kuukuukon\nまで連絡をしてください。","url":"https://booth.pm/ja/items/1083899","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1083899/ba706fe6-8a9c-47b6-8a66-077b33abcce0_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iAgOLuuIYVKtiUbmbgIUTjlBrWQ3dBcDQ5e0SR9XFlo="></script>
+    nonce="Ayn0ojM7BnsRMwH4Rajksk59bmXwrypRvBahOh3wwMQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -142,9 +142,9 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://kuukuukon.booth.pm/"><img alt=
-                            "空々神社社務所" class=
+                            "空々仮想製作所" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/31c309e8-cf8f-4cfc-9495-5cbbe2f34f2c_base_resized.jpg">空々神社社務所</a>
+                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/acfaaa10-b281-4b3f-b44d-25a0f1c5a1e8_base_resized.jpg">空々仮想製作所</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【Free】スキニング済み3Dモデル「優しい６ボーン式触手さん１」
